<?xml version="1.0" encoding="utf-8"?>
<TableLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_margin="16dp"
android:stretchColumns="2"
    android:parentActivityName="MainActivity"
tools:context=".data.LoginFragment" >

<TableRow>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="end"
        android:text="@string/serverHost"/>
    <EditText
        android:id="@+id/serverHostField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:inputType="text"
        tools:text="10.0.2.2" />
</TableRow>

<TableRow>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="end"
        android:text="@string/serverPort"/>
    <EditText
        android:id="@+id/serverPortField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:inputType="text"
        tools:text="8080" />
</TableRow>

<TableRow>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="end"
        android:text="@string/userName"/>
    <EditText
        android:id="@+id/userNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:inputType="text"
        tools:text="nelsonhk" />
</TableRow>

<TableRow>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="end"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:inputType="textPassword"
        tools:text="password" />
</TableRow>

<TableRow>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="end"
        android:text="@string/firstName"/>
    <EditText
        android:id="@+id/firstNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:inputType="textPersonName"
        tools:text="Hannah" />
</TableRow>

<TableRow>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="end"
        android:text="@string/lastName"/>
    <EditText
        android:id="@+id/lastNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:inputType="textPersonName"
        tools:text="Nelson Osorio" />
</TableRow>

<TableRow>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="end"
        android:text="@string/emailAddress"/>
    <EditText
        android:id="@+id/emailAddressField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:inputType="textEmailAddress"
        tools:text="hknelson0@gmail.com" />
</TableRow>

<TableRow>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="end"
        android:text="@string/gender"/>
    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/maleRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maleGenderButton"/>
        <RadioButton android:id="@+id/femaleRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femaleGenderButton"
            android:checked="true"/>
    </RadioGroup>
</TableRow>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingTop="20dp"
    android:gravity="center">
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButton" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerButton" />
</LinearLayout>


</TableLayout>